--- a/bot/src/bot/config/tasks.yaml
+++ b/bot/src/bot/config/tasks.yaml
@@ -1,17 +1,35 @@
-research_task:
-  description: >
-    Conduct a thorough research about {topic}
-    Make sure you find any interesting and relevant information given
-    the current year is {current_year}.
-  expected_output: >
-    A list with 10 bullet points of the most relevant information about {topic}
-  agent: researcher
+#research_task:
+#  description: >
+#    Conduct a thorough research about {topic}
+#    Make sure you find any interesting and relevant information given
+#    the current year is {current_year}.
+#  expected_output: >
+#    A list with 10 bullet points of the most relevant information about {topic}
+#  agent: researcher
 
-reporting_task:
+#reporting_task:
+#  description: >
+#    Review the context you got and expand each topic into a full section for a report.
+#    Make sure the report is detailed and contains any and all relevant information.
+#  expected_output: >
+#    A fully fledged report with the main topics, each with a full section of information.
+#    Formatted as markdown without '```'
+#  agent: reporting_analyst
+
+project_plan_task:
   description: >
-    Review the context you got and expand each topic into a full section for a report.
-    Make sure the report is detailed and contains any and all relevant information.
+    Analyse and create a detailed plan for {project_name} project.
+    Break it down into smaller detailed and acionable tasks.
+    Include the tools, dependencies and resources needed for each task.
+    Give each section a title and description along with an estimated time to complete as well as the priority for each task.
   expected_output: >
-    A fully fledged report with the main topics, each with a full section of information.
-    Formatted as markdown without '```'
-  agent: reporting_analyst
+    Break down the project into smaller tasks, each with a title, description, estimated time to complete, and priority.     
+  agent: scrum_master
+
+plan_creation:
+  description: >
+    Create a detailed project plan for {project_name} that includes all necessary tasks, resources, and timelines based on the project breakdown received.
+    Ensure that the plan is comprehensive and actionable, with clear priorities and dependencies.
+  expected_output:
+    A detailed project plan that includes all necessary tasks, resources, and timelines.
+  agent: scrum_planner
